namespace RecipeApp.Api.Contracts;

public sealed record AdminSessionResponse(string Username);
