namespace RecipeApp.Api.Contracts;

public sealed record LoginAdminRequest(string Username, string Password);
