@startuml Backend class overview

skinparam classAttributeIconSize 0

package "Contracts" {
  class CreateRecipeRequest
  class UpdateRecipeRequest
  class RecipeResponse
  class CreateGalleryImageRequest
  class GalleryImageResponse
  class LoginAdminRequest
  class AdminSessionResponse
  class RecipeSuggestionRequest
  class RecipeSuggestionResponse
}

package "Domain" {
  class Recipe
  class GalleryImage
}

package "Services" {
  interface IRecipeService
  class RecipeService
  interface IGalleryService
  class GalleryService
  interface IRecipeSuggestionService
  class RecipeSuggestionService
}

package "Infrastructure" {
  class AdminAuthorizationFilter
  class AdminSessionStore
}

package "Repositories" {
  interface IRecipeRepository
  class EfRecipeRepository
  class RecipeSeedData

  interface IGalleryRepository
  class EfGalleryRepository
  class GallerySeedData
}

package "Data" {
  class RecipeDbContext
  class RecipeDbInitializer
  class RecipeEntity
  class GalleryImageEntity
  class RecipeDbMapper
  class GalleryDbMapper
}

IRecipeService <|.. RecipeService
IGalleryService <|.. GalleryService
IRecipeSuggestionService <|.. RecipeSuggestionService

RecipeService --> IRecipeRepository
GalleryService --> IGalleryRepository

IRecipeRepository <|.. EfRecipeRepository
IGalleryRepository <|.. EfGalleryRepository

EfRecipeRepository --> RecipeDbContext
EfGalleryRepository --> RecipeDbContext
EfRecipeRepository ..> RecipeDbMapper
EfGalleryRepository ..> GalleryDbMapper

RecipeDbInitializer --> RecipeDbContext
RecipeDbInitializer ..> RecipeSeedData
RecipeDbInitializer ..> GallerySeedData
RecipeDbInitializer ..> RecipeDbMapper
RecipeDbInitializer ..> GalleryDbMapper

RecipeDbContext --> RecipeEntity
RecipeDbContext --> GalleryImageEntity
AdminAuthorizationFilter --> AdminSessionStore

@enduml
